--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div id="campo">
-        <div id="mensajes"></div>
+        <div id="mensajes1"></div>
+        <div id="mensajes2"></div>
+        <div id="mensajes3"></div>
+        <div id="mensajes4"></div>
+
         <div id="nube">
             <div id="lluvia"></div>
         </div>
